Closed Bug 1249870 Opened 9 years ago Closed 9 years ago

Fix references to obsolete nsPIDOMWindow in mintrayr

Categories

(Instantbird Graveyard :: Other, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Instantbird 47

People

(Reporter: abdelrahman, Assigned: abdelrahman)

References

Details

(Keywords: regression)

Attachments

(1 file)

Fix build failure of mintrayr component according to changes in bug 1241764
This will not totally fix the failure as |InitMouseEvent| has been removed from |nsIDOMMouseEvent| interface.
Assignee: nobody → ab
Status: NEW → ASSIGNED
Attachment #8721624 - Flags: review?(aleth)
Blocks: 1241764
Keywords: regression
OS: Unspecified → Linux
Comment on attachment 8721624 [details] [diff] [review] fix mintrayr failure Review of attachment 8721624 [details] [diff] [review]: ----------------------------------------------------------------- This should be OK, but I guess it can't be tested until the InitMouseEvent is working.
Attachment #8721624 - Flags: review?(aleth) → review+
https://hg.mozilla.org/comm-central/rev/6cfd87993ea0ce3fe8640f6529bb0c9d88735fea Bug 1249870 - Fix references to obsolete nsPIDOMWindow in mintrayr. r=aleth
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Instantbird 47
Summary: Fix build failure of mintrayr component → Fix references to obsolete nsPIDOMWindow in mintrayr
(In reply to Abdelrhman Ahmed [:abdelrhman] from comment #1) > Created attachment 8721624 [details] [diff] [review] > fix mintrayr failure > > This will not totally fix the failure as |InitMouseEvent| has been removed > from |nsIDOMMouseEvent| interface. Did you file a bug/patch for this?
Flags: needinfo?(ab)
(In reply to aleth [:aleth] from comment #4) > Did you file a bug/patch for this? Yes, I've worked on a patch for that, but it's not finished yet. Also, I've just filed a bug (bug 1250746) for this.
Flags: needinfo?(ab)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: