Bug 1249870 - Fix references to obsolete nsPIDOMWindow in mintrayr. r=aleth

--HG--
extra : amend_source : 9f73608acf34f3076d2970669d3977d40ab13f32